--- a/src/main/java/Views/UIView.fxml
+++ b/src/main/java/Views/UIView.fxml
@@ -2,33 +2,43 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="513.0" prefWidth="569.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.UIcontroller">
+<AnchorPane prefHeight="598.0" prefWidth="569.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.UIcontroller">
    <children>
-      <TextField id="instructionsTF" fx:id="instructionsTF" alignment="TOP_CENTER" layoutX="20.0" layoutY="12.0" prefHeight="33.0" prefWidth="528.0">
+      <TextField id="instructionsTF" fx:id="instructionsTF" alignment="TOP_CENTER" layoutX="22.0" layoutY="12.0" prefHeight="33.0" prefWidth="328.0">
          <font>
             <Font name="System Bold" size="13.0" />
          </font></TextField>
-      <TextArea id="textArea" layoutX="20.0" layoutY="52.0" prefHeight="399.0" prefWidth="528.0" text="Crop:&#10;Variety: &#10;Expected yield (ton/h):&#10;Soil type: &#10;Previous crop:&#10;Irrigation method:&#10;Irrigation volume (mm/season):&#10;Fertilization method:&#10;Base dressing:&#10;Soil correction (percent/season):&#10;Soil pH:">
-         <font>
+      <TextArea id="textArea" layoutX="-3.0" layoutY="50.0" prefHeight="550.0" prefWidth="576.0" text="Crop:&#10;Variety: &#10;Expected yield (ton/h):&#10;Soil type: &#10;Previous crop:&#10;Irrigation method:&#10;Irrigation vol. (mm/season):&#10;Fertilization method:&#10;Base dressing:&#10;Soil correction (%/season):&#10;Soil pH:">
+          <font>
             <Font size="24.0" />
          </font>
       </TextArea>
-      <ChoiceBox fx:id="soilTypesCB" layoutX="294.0" layoutY="168.0" prefHeight="25.0" prefWidth="254.0" />
-      <ChoiceBox fx:id="cropTypesCB" layoutX="294.0" layoutY="64.0" prefHeight="25.0" prefWidth="254.0" />
-      <ChoiceBox fx:id="varTypesCB" layoutX="294.0" layoutY="99.0" prefHeight="25.0" prefWidth="254.0" />
-      <TextField fx:id="expectedYieldTF" layoutX="294.0" layoutY="135.0" prefHeight="25.0" prefWidth="254.0" />
-      <ChoiceBox fx:id="irrigationMethodCB" layoutX="294.0" layoutY="238.0" prefHeight="25.0" prefWidth="254.0" />
-      <TextField fx:id="irrigationVolumeTF" layoutX="294.0" layoutY="274.0" prefHeight="25.0" prefWidth="254.0" />
-      <ChoiceBox fx:id="fertilizationMethodCB" layoutX="294.0" layoutY="308.0" prefHeight="25.0" prefWidth="254.0" />
-      <ChoiceBox fx:id="baseDressingCB" layoutX="294.0" layoutY="343.0" prefHeight="25.0" prefWidth="254.0" />
-      <TextField fx:id="soilPHTF" layoutX="294.0" layoutY="415.0" prefHeight="25.0" prefWidth="254.0" />
-      <Button fx:id="submitB" layoutX="244.0" layoutY="462.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="78.0" text="Submit" />
-      <ChoiceBox fx:id="previousCropCB" layoutX="294.0" layoutY="203.0" prefHeight="25.0" prefWidth="254.0" />
+      <ChoiceBox fx:id="soilTypesCB" layoutX="312.0" layoutY="168.0" prefHeight="25.0" prefWidth="254.0" />
+      <ChoiceBox fx:id="cropTypesCB" accessibleText="Crop" layoutX="312.0" layoutY="61.0" prefHeight="4.0" prefWidth="254.0" />
+      <ChoiceBox fx:id="varTypesCB" layoutX="312.0" layoutY="97.0" prefHeight="25.0" prefWidth="254.0" />
+      <TextField fx:id="expectedYieldTF" layoutX="312.0" layoutY="133.0" prefHeight="25.0" prefWidth="254.0" />
+      <ChoiceBox fx:id="irrigationMethodCB" layoutX="312.0" layoutY="238.0" prefHeight="25.0" prefWidth="254.0" />
+      <TextField fx:id="irrigationVolumeTF" layoutX="312.0" layoutY="274.0" prefHeight="25.0" prefWidth="254.0" />
+      <ChoiceBox fx:id="fertilizationMethodCB" layoutX="312.0" layoutY="308.0" prefHeight="25.0" prefWidth="254.0" />
+      <ChoiceBox fx:id="baseDressingCB" layoutX="312.0" layoutY="343.0" prefHeight="25.0" prefWidth="254.0" />
+      <TextField fx:id="soilPHTF" layoutX="312.0" layoutY="415.0" prefHeight="25.0" prefWidth="254.0" />
+      <Button fx:id="submitB" layoutX="245.0" layoutY="564.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="78.0" text="Submit" />
+      <TextField fx:id="soilCorrectionTF" layoutX="312.0" layoutY="379.0" prefHeight="25.0" prefWidth="254.0" />
+      <ChoiceBox fx:id="previousCropCB" layoutX="312.0" layoutY="203.0" prefHeight="25.0" prefWidth="254.0" />
+      <Button fx:id="btnSoilAnalysis" layoutX="22.0" layoutY="466.0" mnemonicParsing="false" onAction="#soilAnalysisFileChooserAction" prefHeight="25.0" prefWidth="140.0" text="Select soil analysis:" />
+      <Label fx:id="labSoilAnalysis" layoutX="168.0" layoutY="469.0" prefHeight="17.0" prefWidth="380.0" text="no file selected  (possible to skip)" />
+      <Button fx:id="btnTissueAnalysis" layoutX="22.0" layoutY="534.0" mnemonicParsing="false" onAction="#tissueAnalysisFileChooserAction" prefHeight="25.0" prefWidth="140.0" text="Select tissue analysis:" />
+      <Label fx:id="labTissueAnalysis" layoutX="168.0" layoutY="537.0" prefHeight="17.0" prefWidth="380.0" text="no file selected  (possible to skip)" />
+      <Button fx:id="btnWaterAnalysis" layoutX="22.0" layoutY="500.0" mnemonicParsing="false" onAction="#waterAnalysisFileChooserAction" prefHeight="25.0" prefWidth="140.0" text="Select water analysis:" />
+      <Label fx:id="labWaterAnalysis" layoutX="168.0" layoutY="503.0" prefHeight="17.0" prefWidth="380.0" text="no file selected  (possible to skip)" />
+      <DatePicker fx:id="datePicker" layoutX="374.0" layoutY="16.0" />
       
 
 
