--- a/src/main/java/Views/UIView.fxml
+++ b/src/main/java/Views/UIView.fxml
@@ -15,7 +15,7 @@
          <font>
             <Font name="System Bold" size="13.0" />
          </font></TextField>
-      <TextArea id="textArea" layoutX="-3.0" layoutY="50.0" prefHeight="550.0" prefWidth="576.0" text="Crop:&#10;Variety: &#10;Expected yield (ton/h):&#10;Soil type: &#10;Previous crop:&#10;Irrigation method:&#10;Irrigation vol. (mm/season):&#10;Fertilization method:&#10;Base dressing:&#10;Soil correction (%/season):&#10;Soil pH:">
+      <TextArea id="textArea" layoutX="-3.0" layoutY="50.0" prefHeight="550.0" prefWidth="576.0" text="Crop:&#10;Variety: &#10;Expected yield (ton/ha):&#10;Soil type: &#10;Previous crop:&#10;Irrigation method:&#10;Irrigation vol. (mm/season):&#10;Fertilization method:&#10;Base dressing:&#10;Soil correction (%/season):&#10;Soil pH:">
           <font>
             <Font size="24.0" />
          </font>
